[metadata]
name = meta-learning
version = 1.0.0
author = Le Quan
description = Meta Learning using different One-Shot and K-Shot Learning methods

[options]
python_requires = >=3.7, <4
install_requires =
    torch==1.13.1
    torchvision==0.14.1
    numpy==1.24.2
    matplotlib
    seaborn
    
packages=find:

[options.extras_require]
train = 
    tqdm
test = 
    pytest==7.2.2
notebook =
    ipykernel==6.21.3